# AI-Devops-Teams

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  aws_agent.py  base_agent.py  cloud_agent.py  database_agent.py  github_agent.py  kubernetes_agent.py  manager_agent.py  metrics_agent.py  network_agent.py  report_agent.py  reviewer_agent.py  slack_agent.py
api/: middleware.py  routes.py  schemas.py
app/: __init__.py  config.py
docs/: 01-PRD.md  02-SRS.md  03-SYSTEM-DESIGN.md  04-LOW-LEVEL-DESIGN.md  06-AGENT-DESIGN.md  07-PROJECT-ROADMAP.md  08-TESTING-STRATEGY.md  09-DEPLOYMENT-GUIDE.md
graphs/: investigation_workflow.py
services/: incident_service.py  investigation_service.py
tests/: test_api.py  test_llm_tools.py
tools/: __init__.py  aws_tools.py  database_tools.py  github_tools.py  kubernetes_tools.py  llm_tools.py  metrics_tools.py  slack_tools.py
